--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,6 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Serencast</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script type="text/javascript">
-      // CoffeeScriptの場合はこう
-      //$ ->
-      //  初期化コード
-      $(function() {
-      console.log( "ready!" );
-      });
-    </script>
     <link rel="stylesheet" href="/stylesheets/serencast.css" type="text/css">
     <style type="text/css">
     </style>
@@ -19,6 +10,13 @@
     <h1>Serencast</h1>
 
     Serencastは
+    URLのリストを発信したり講読したりすることにより、
+    好きな情報を簡単にザッピングしたり
+    面白い情報を人に推薦したりできるシステムです。
+    
+    <ul>
+      <ul>Scrapboxを利用します</ul>
+    </ul>
   </body>
 </html>
 
