--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Serencast</title>
-    <link rel="icon" href="public/images/favicon.ico" />
-    <link rel="stylesheet" href="public/stylesheets/serencast.css" type="text/css">
+    <link rel="icon" href="images/favicon.ico" />
+    <link rel="stylesheet" href="stylesheets/serencast.css" type="text/css">
     <style type="text/css">
     </style>
   </head>
