--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,20 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="javascripts/jquery.mousewheel.js"></script>
     <script>
-      //var project = 'masui';
-      //var page = 'Watch';
-      var project = 'MasuiCast';
-      var page = 'Video';
+      var query = document.location.search.substring(1);
+      var parameters = query.split('&');
+      var result = {};
+      for(var i=0; i < parameters.length; i++) {
+         var element = parameters[i].split('=');
+         var paramName = decodeURIComponent(element[0]);
+         var paramValue = decodeURIComponent(element[1]);
+         result[paramName] = decodeURIComponent(paramValue);
+      }
+      var project = result.project;
+      if(!project) project = "masui";
+      var page = result.page;
+      if(!page) page = "Watch";
+      var json = `/${project}/${page}/json`;
       var json = `http://serencast.com/${project}/${page}/json`;
     </script>
     <script src="javascripts/gear.js"></script>
