パラメタいろいろ調製

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,6 @@
   </head>
   <body>
     <webview id="webview" src="https://serencast.com/" style="display:flex;width:100%;height:100%"></webview>
-    <div id='menu' style="position:absolute;width:120;height:100%;top:0;left:0;"></div>
+    <div id='menu' style="position:absolute;height:100%;top:0;left:0;"></div>
   </body>
 </html>
