ビデオ作成用にキー操作を表示

--- a/public/menu.html
+++ b/public/menu.html
@@ -23,6 +23,14 @@
   </head>
   <body>
     <div id='menu'></div>
+    <div id="pressed" style="position:absolute; top:10; left:60; font-size:30; color:#000;">
+    </div>
+    <div id="up" style="position:absolute; top:30; left:80; font-size:100; color:#ff0; display:none;">
+      ▲
+    </div>
+    <div id="down" style="position:absolute; top:120; left:80; font-size:100; color:#ff0; display:none;">
+      ▼
+    </div>
   </body>
 </html>
 
