評価実験のためのテスト生成

--- a/public/menu.html
+++ b/public/menu.html
@@ -15,6 +15,7 @@
       var project = result.project;
       var page = result.page;
       var json = `/${project}/${page}/json`;
+      var test = result.test;		       
     </script>
     <script src="/javascripts/jquery.js"></script>
     <script src="/javascripts/jquery.mousewheel.js"></script>
