--- a/public/menu.html
+++ b/public/menu.html
@@ -18,9 +18,10 @@
       var project = result.project;
       var page = result.page;
       var json = `/${project}/${page}/json`;
-      if(result.test) singlewin = true;
+      if(result.test == 'true') singlewin = true;
       if(result.showbutton) showbutton = true;
       if(result.count) count = Number(result.count);
+
     </script>
     <script src="/javascripts/jquery.js"></script>
     <script src="/javascripts/jquery.mousewheel.js"></script>
