--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 	    <p><b>
 	      Serencast is a content browsing service where
 	      everyone can enjoy &ldquo;zapping&ldquo;
-	      to find an entry from a huge hierarchical content database
+	      to find an entry from a huge hierarchical content database,
 	      only using two keys (▲ and ▼).
 	      Anybody can enjoy viewing contents, and also
 	      enjoy broadcasting the list by publishing data on
@@ -37,7 +37,7 @@
 
 	  <p></p>
 
-	  Try the demos after allowing popups.
+	  Try the demos after enabling popups.
 	  <ul>
 	    <li><a href="http://serencast.com/Serencast/Top">Demo 1</a> (<a href="https://scrapbox.io/Serencast/Top">Scrapbox data</a>)</li>
 	    <li><a hfef="http://serencast.com/MasuiCast/%E8%96%AC%E5%B8%AB%E5%B2%B3%E5%B1%B1%E8%A1%8C2009">Demo 2</a> (<a href="https://scrapbox.io/MasuiCast/%E8%96%AC%E5%B8%AB%E5%B2%B3%E5%B1%B1%E8%A1%8C2009">Scrapbox data</a>)</li>
