--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,21 @@
 
 	  <p></p>
 
-	  Try the demos after enabling popups.
 	  <ul>
-	    <li><a href="http://serencast.com/Serencast/Top">Demo 1</a> (<a href="https://scrapbox.io/Serencast/Top">Scrapbox data</a>)</li>
-	    <li><a hfef="http://serencast.com/MasuiCast/%E8%96%AC%E5%B8%AB%E5%B2%B3%E5%B1%B1%E8%A1%8C2009">Demo 2</a> (<a href="https://scrapbox.io/MasuiCast/%E8%96%AC%E5%B8%AB%E5%B2%B3%E5%B1%B1%E8%A1%8C2009">Scrapbox data</a>)</li>
+	    <li>Try Serencast on your Web browser after enabling popups.</li>
+	    <ul>
+	      <li><a href="http://serencast.com/Serencast/Top">Demo 1</a> (<a href="https://scrapbox.io/Serencast/Top">Scrapbox data</a>)</li>
+	      <li><a hfef="http://serencast.com/MasuiCast/%E8%96%AC%E5%B8%AB%E5%B2%B3%E5%B1%B1%E8%A1%8C2009">Demo 2</a> (<a href="https://scrapbox.io/MasuiCast/%E8%96%AC%E5%B8%AB%E5%B2%B3%E5%B1%B1%E8%A1%8C2009">Scrapbox data</a>)</li>
 	    </ul>
+
+	    <li>You can also try
+	      <a href="http://masui.org.s3.amazonaws.com/7/9/79e2981f513bedfbf4a5a8693a5e3b6a.dmg">Serencast.app</a>
+	      on Mac.</li>
+
+	    <li><a href="http://masui.org.s3.amazonaws.com/f/3/f38624d33d42f8b6531c6286d474f64b.pdf">Serencast paper</a></li>
+
+	  </ul>
 	  
-	  <p></p>
 	  <div align="center">
 	    <a href="http://masui.org">Toshiyuki Masui</a> @ Keio University
 	  </div>
